# longcodezip-rs

./: .env.example  .gitignore  ARCHITECTURE.md  CACHE_PARALLEL.md  CHANGELOG.md  COMPRESSION_BENCHMARKS.md  Cargo.toml  EXAMPLES.md  FINE_GRAINED.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_v0.2.0.md  IMPLEMENTATION_REPORT_v0.4.0.md  IMPLEMENTATION_REPORT_v0.6.0.md  LICENSE  PROVIDER_GUIDE.md  PROVIDER_QUICK_REF.md  QUICKSTART.md  README.md  ROADMAP.md  ROADMAP_STATUS.md  SECURITY.md  TEXT_COMPRESSION.md  TEXT_FAQ.md  TOKENIZER_GUIDE.md  USAGE_EXAMPLES.md
LongCodeZip/: .gitignore  LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
LongCodeZip/assets/: example_context.py
LongCodeZip/experiments/: README.md
LongCodeZip/experiments/long-code-completion/: code_compressor.py  compare_empty_line_handling.py  main.py  run.sh  (+1 more)
LongCodeZip/longcodezip/: __init__.py
examples/: benchmark_llm.rs  benchmark_test.rs  cache_parallel_demo.rs  demo.rs  fine_grained_demo.rs  providers_demo.rs  simple_text_demo.rs  test_files_stats.rs  test_single_deepseek.rs  text_compression_demo.rs  tokenizer_demo.rs
src/: cache.rs  code_splitter.rs  compressor.rs  entropy.rs  error.rs  lib.rs  optimizer.rs  parallel.rs  provider.rs  text_chunker.rs  tokenizer.rs  types.rs
test_files/: LLM_TEST_RESULTS.md  STATISTICS_REPORT.md  ShoppingCart.java  analytics_query.sql  api_reference.txt  benchmark.rs  dashboard.html  ml_pipeline_doc.md  openapi_spec.json  server_utils.rs  task_queue.go  user_service.ts  web_scraper.py
tests/: integration_tests.rs
(+10 files in other folders)
